# comp-565

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .textidote  CMakeLists.txt  README.md
Assets/: CubeManager.cs  Scene.unity  TriangleExplosion.cs  UIManager.cs
Assets/Materials/: Emissive.mat  base.mat  metal01.mat  stone_bricks01.mat
Assets/Prefabs/: Camera.prefab  Directional Light.prefab  PP Volume.prefab  Room.prefab
Assets/Resources/Materials/: chessboard01.mat  stone_bricks02.mat
Assets/Room/prefabs/: Bench.prefab  Ceiling.prefab  Chandelier.prefab  Flame.prefab  Main.prefab  Mounted Candle.prefab  Pillars.prefab  Rafter.prefab  Room.prefab  Table Set.prefab  Table.prefab  Window Glass.prefab  Window.prefab  bookcase.prefab  candle.prefab  door.prefab
Assets/Scenes/: Ambient Light.lighting  Ambient Light.unity  Area Lights.unity  Directional Lights.unity  Emissive Materials.unity  Lighting.lighting  Point Lights.unity  SampleScene.unity  Spot Lights.unity
Assets/Scenes/Ambient Light/: LightingData.asset  Lightmap-0_comp_light.exr  Lightmap-1_comp_light.exr
Assets/Scenes/Area Lights/: LightingData.asset  Lightmap-0_comp_light.exr  Lightmap-1_comp_light.exr
Assets/Scenes/Directional Lights/: LightingData.asset
Assets/Scenes/Directional Lights_Profiles/: Camera Profile.asset
Assets/Scenes/Emissive Materials/: LightingData.asset  Lightmap-0_comp_light.exr  Lightmap-1_comp_light.exr  Lightmap-2_comp_light.exr  Lightmap-3_comp_light.exr  Lightmap-4_comp_light.exr  Lightmap-5_comp_light.exr  Lightmap-6_comp_light.exr
Assets/Scenes/Point Lights/: LightingData.asset  Lightmap-0_comp_light.exr  Lightmap-1_comp_light.exr
Assets/Scenes/Spot Lights/: LightingData.asset
Assets/SpaceZeta_Spotlight/Scenes/: DemoScene.unity
ProjectSettings/: ProjectSettings.asset  TagManager.asset
doc/: dict.txt  report.sty  report.tex
include/: io.h  shader.h  util.h  vertex.h  window.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
resources/: fragment.glsl  vertex.glsl
src/: io.c  main.c  shader.c  util.c  vertex.c  window.c
